# blits-rs

./: .gitignore  Cargo.toml  README.md  justfile
docs/: board.txt  commands.md  evaluator.md  ltp.md
src/: lib.rs  main.rs
src/agent/: evaluator.rs  game.rs  mod.rs
src/battle_of_lits/: consts.rs  coords.rs  mod.rs  notation.rs
src/battle_of_lits/board/: board_cell.rs  foursquare.rs  indexing.rs  masks.rs  mod.rs  moves.rs  neighbours.rs  pretty.rs  reachability.rs  scores.rs  zobrist.rs
src/battle_of_lits/piecemap/: bridges.rs  chokepoints.rs  dependencies.rs  isolation.rs  mod.rs  new.rs  shadows.rs
src/battle_of_lits/sets/: coordset.rs  mod.rs  moveset.rs  moveset2.rs
src/battle_of_lits/tetromino/: mod.rs  piecemap.rs  transform.rs
src/ltp_server/: mod.rs  options.rs
